2003/10/03 16:29 (-0400) muppetman

	* Gnome2.pm, META.yml, README, debian/changelog: release 0.38

2003/10/01 18:45 (+0200) kaffeetisch

	* xs/GnomeIconTheme.xs
	* xs/GnomeScores.xs: Move variable declarations to the beginning
	of the block to make it compile on compilers that attach more
	importance to standards.  Found by Nelis Lamprecht.
	
2003/09/30 15:56 (+0200) kaffeetisch

	* druid.pl: Use Gnome2::Program->get_program instead of ->get.

	* t/GnomeDruid.t: Complete GnomeDruid test.

	* t/GnomeEntry.t: Disable a test which would cause GConf to add a
	key to its DB.

	* xs/GnomeDruidPageEdge.xs: Provide defaults for the title, text,
	logo, watermark and top_watermark parameters.

	* xs/GnomeDruidPageStandard.xs: Provide defaults for the logo and
	top_watermark parameters.

2003/09/29 16:33 (+0200) kaffeetisch

	* xs/GnomeDateEdit.xs
	* t/GnomeDateEdit.t: Change gnome_date_edit_get_flags to return a
	proper flag value instead of a plain integer.

	* t/GnomeThumbnail.t: Add comment to methods that are segfaulting.

2003/09/27 01:35 (+0200) kaffeetisch

	* t/GnomePopupMenu.t: Re-enabled the popup code, but make it skip it if
	we are not running 2.2.0 (which introduced Gtk2::Gdk::Event->new) or
	above.

2003/09/26 16:20 (+0200) kaffeetisch

	* TODO: Added libbonoboui.  Added explanations to gnome-config,
	gnome-triggers and GnomeThemeFile.

	* t/*: Removed unneeded main loops.  Fixed comments.

	* t/GnomeIconList.t: Filled the skeleton.

	* t/GnomeProgram.t: Changed human readable program name to avoid line
	wrapping.

	* xs/GnomeHelp.xs: Comment out gnome_help_display_uri.

	* xs/GnomeIconTheme.xs: Removed IconData prototypes.  They're not
	needed.

	A t/GnomeHelp
	A t/GnomeURL
	* MANIFEST: Initial tests.  Not run by make test since they require
	user interaction.

	A xs/GnomeUtil.xs
	A t/GnomeUtil.t
	* MANIFEST: Initial implementation of GnomeUtil.

2003/09/26 04:40 (-0400) muppetman

	* Gnome2.pm, META.yml, README, debian/changelog: release 0.36
