@@ -1,3 +1,11 @@
+2003/10/04 16:26 (+0200)
+
+	* Gnome2.pm: Alter documentation to better describe Gnome2.  Don't
+	repeat what Gtk2.pm says, but rather point the reader to it.  Add
+	links to the API documentation.  Add a MISSING METHODS section, a
+	RENAMED METHODS section and a DIFFERENT CALL SIGNATURES OR
+	SEMANTICS section.  (Following Gtk2.pm's example.)
+
 2003/10/03 16:29 (-0400) muppetman
 
 	* Gnome2.pm, META.yml, README, debian/changelog: release 0.38
